Aplicado Angular Material y Bootstrap Grid

--- a/sistema-examenes-frontend/src/app/app.component.html
+++ b/sistema-examenes-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="bootstrap-wrapper">
+<div class="bootstrap wrapper">
   <div class="container">
     <h1>Bienvenido a TestYourself</h1>
   </div>
