--- a/sistema-examenes-frontend/src/app/app.component.html
+++ b/sistema-examenes-frontend/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="bootstrap wrapper">
-  <div class="container">
-    <h1>Bienvenido a TestYourself</h1>
-  </div>
-</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-signup></app-signup>
