--- a/sistema-examenes-frontend/src/app/pages/signup/signup.component.html
+++ b/sistema-examenes-frontend/src/app/pages/signup/signup.component.html
@@ -6,34 +6,35 @@
           <img src="../../../assets/add-user.png" alt="" width="100" height="100">
         </div>
         <h1 class="text-center">Regístrate aquí</h1>
-        <form action="">
+        <form (ngSubmit) = "formSubmit()">
           <mat-form-field class="full-width" appearence="outline">
             <mat-label>Nombre de usuario</mat-label>
-            <input matInput placeholder="Digite su nombre de usuario">
+            <input required [(ngModel)] = "user.username" name = "username" matInput placeholder="Digite su nombre de usuario">
+            <mat-hint>El nombre de usuario debe ser único</mat-hint>
           </mat-form-field>
           <mat-form-field class="full-width" appearence="outline">
             <mat-label>Contraseña</mat-label>
-            <input type="password" matInput placeholder="Digite su contraseña">
+            <input required [(ngModel)] = "user.password" name = "password" type = "password" matInput placeholder="Digite su contraseña">
           </mat-form-field>
           <mat-form-field class="full-width" appearence="outline">
             <mat-label>Nombre</mat-label>
-            <input matInput placeholder="Digite su nombre">
+            <input required [(ngModel)] = "user.nombre" name = "nombre" matInput placeholder="Digite su nombre">
           </mat-form-field>
           <mat-form-field class="full-width" appearence="outline">
             <mat-label>Apellido</mat-label>
-            <input matInput placeholder="Digite su apellido">
+            <input required [(ngModel)] = "user.apellido" name = "apellido" matInput placeholder="Digite su apellido">
           </mat-form-field>
           <mat-form-field class="full-width" appearence="outline">
             <mat-label>Email</mat-label>
-            <input type="email" matInput placeholder="Digite su email">
+            <input required [(ngModel)] = "user.email" name = "email" type="email" matInput placeholder="Digite su email">
           </mat-form-field>
           <mat-form-field class="full-width" appearence="outline">
             <mat-label>Teléfono</mat-label>
-            <input matInput placeholder="Digite su teléfono">
+            <input required [(ngModel)] = "user.telefono" name = "telefono" matInput placeholder="Digite su telefono">
           </mat-form-field>
           <div class="container text-center">
             <button mat-raised-button color="primary">Registrar</button>
-            <button style="margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
+            <button type="reset" style="margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
           </div>
         </form>
         <br><br><br>
