--- a/sistema-examenes-frontend/src/app/pages/signup/signup.component.html
+++ b/sistema-examenes-frontend/src/app/pages/signup/signup.component.html
@@ -3,7 +3,7 @@
     <div class="row" style="margin-top: 20px;">
       <div class="col-md-6 offset-md-3">
         <div class="container text-center">
-          <img src="../../../assets/add-user.png" alt="" width="100" height="100">
+          <img src="../../../assets/add-user.png" width="100" height="100">
         </div>
         <h1 class="text-center">Regístrate aquí</h1>
         <form (ngSubmit) = "formSubmit()">
