--- a/sistema-examenes-frontend/src/app/components/navbar/navbar.component.html
+++ b/sistema-examenes-frontend/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar color = "primary">
-  <a [routerLink]="'/'" mat-icon-button class="example-icon" arial-label="Example icon-button with menu icon">
+  <a [routerLink]="'/'" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu_books</mat-icon>
   </a>
   <span>Portal de exámenes</span>
   <span class="example-spacer"></span>
-  <a [routerLink]="'/login'" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <a [routerLink]="'/login'" mat-icon-button class="example-icon favorite-icon fs" aria-label="Example icon-button with heart icon">
     Log in
   </a>
-  <a [routerLink]="'/signup'" mat-icon-button class="example-icon favorite-icon mr20 ml70" aria-label="Example icon-button with heart icon">
+  <a [routerLink]="'/signup'" mat-icon-button class="example-icon favorite-icon mr20 ml70 fs" aria-label="Example icon-button with heart icon">
     Sign up
   </a>
 </mat-toolbar>
